--- a/arch/arm64/configs/dandelion_defconfig
+++ b/arch/arm64/configs/dandelion_defconfig
@@ -1,4 +1,4 @@
-CONFIG_CROSS_COMPILE="aarch64-linux-gnu-"
+#CONFIG_CROSS_COMPILE="aarch64-linux-gnu-"
 CONFIG_LOCALVERSION="-perf"
 CONFIG_LOCALVERSION_AUTO=y
 # CONFIG_FHANDLE is not set
@@ -20,7 +20,11 @@ CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_SYSCTL_SYSCALL=y
 # CONFIG_KALLSYMS_BASE_RELATIVE is not set
 # CONFIG_SLUB_DEBUG is not set
-CONFIG_CC_STACKPROTECTOR_STRONG=y
+CONFIG_CC_STACKPROTECTOR_STRONG=n
+CONFIG_THIN_ARCHIVES=y
+CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
+CONFIG_ARCH_SUPPORTS_THINLTO=y
+CONFIG_LTO_NONE=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_MACH_MT6765=y
